# qxilt

./: .dockerignore  .env.docker.local.example  .env.local.example  .env.prod.example  .gitignore  Dockerfile.dev  Dockerfile.prod  Makefile  README.md  koyeb.yaml  pyproject.toml
.github/workflows/: deploy-prod.yml  deploy.yml  pr.yml
docs/: DEV.md
openapi/: openapi.json
qxilt/: __init__.py  config.py  schemas.py  supabase_client.py
qxilt/api/: __init__.py  main.py  routes_reputation.py  routes_reviews.py
qxilt/cli/: __init__.py  main.py
qxilt/scoring/: __init__.py  reputation.py
qxilt/sdk/: __init__.py  client.py
qxilt/services/: __init__.py  reputation.py  reviews.py
scripts/: dev-setup.sh  export_openapi.py
supabase/: config.toml  seed.sql
supabase/migrations/: 0001_init.sql  0002_reputation_functions.sql  0003_indexes.sql
tests/: conftest.py  test_api.py  test_reputation.py
