[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "qxilt"
version = "0.1.0"
description = "Qxilt is a reputation engine for AI agents, providing an SDK, API, and CLI for submitting reviews and computing trust scores."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = []
keywords = ["reputation", "ai", "agents", "trust", "bayesian"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "typer>=0.9.0",
    "supabase>=2.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "scipy>=1.11.0",
    "httpx>=0.26.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0.0"]

[project.scripts]
qxilt = "qxilt.cli.main:app"

[project.urls]
Repository = "https://github.com/qxilt/qxilt"

[tool.hatch.build.targets.wheel]
packages = ["qxilt"]

[tool.hatch.build.targets.sdist]
include = ["/qxilt", "/tests", "/examples"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
